<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brand_yellow"
    android:onClick="resetPassword"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brand_yellow"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/header_margin"
            android:text="@string/register_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/name_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/name_hint"
            android:textColor="@color/brand_purple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:text="@string/email_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/brand_purple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:text="@string/password_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/brand_purple" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/rounded_buttons"
                android:onClick="authenticateUser"
                android:padding="16dp"
                android:text="@string/register_user"
                android:textColor="@color/brand_yellow_dark"
                android:textSize="@dimen/buttonTextSize" />

            <Button
                android:id="@+id/revertButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_buttons"
                android:onClick="loginCall"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@color/brand_yellow_dark"
                android:textSize="@dimen/buttonTextSize" />
        </LinearLayout>

        <Button
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_buttons"
            android:onClick="resetPassword"
            android:padding="16dp"
            android:shadowColor="@color/brand_yellow_dark"
            android:text="RESET PASSWORD"
            android:textColor="@color/brand_yellow_dark"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>