<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainMenu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/main_menu_title"
        app:autoSizeMaxTextSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnStartRecord"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="startRecording"
        android:text="@string/start_record"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu" />

    <Button
        android:id="@+id/btnStopRecord"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="stopRecording"
        android:text="@string/stop_record"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartRecord" />

    <Button
        android:id="@+id/btnSaveEntry"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:onClick="saveNewEntry"
        android:text="@string/save_entry"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStopRecord" />

    <Button
        android:id="@+id/btnRequestTranscript"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:onClick="requestTranscription"
        android:text="@string/request_transcript"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveEntry" />

    <Button
        android:id="@+id/btnDeleteEntry"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:onClick="deleteSavedEntry"
        android:text="@string/delete_entry"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRequestTranscript" />

    <Button
        android:id="@+id/btnRetrieveEntry"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:onClick="retrieveEntry"
        android:text="@string/retrieve_entry"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteEntry" />


</androidx.constraintlayout.widget.ConstraintLayout>